--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -55,6 +55,8 @@
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/unlisted_web_page_karbytes_workflow_established_05august2025.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/unlisted_web_page_karbytes_workflow_established_05august2025.html</a><a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/karbytes_workflow_established_05august2025/" target="_blank" rel="noopener">(*)</a></p>
 
+<p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/update_urls_in_file.py" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/update_urls_in_file.py</a></p>
+
 <hr>
 <p>This web page was last updated on 06_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
