--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -17,6 +17,10 @@
 <p><strong><em>Each raw file which is part of the aforementioned GitHub repository is referenced via hyperlink in the following list of hyperlinks in the order those files appear in that GitHub repository.</em></strong></p>
 <hr />
 
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/LICENSE" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/LICENSE</a></p>
+
+<p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/PROBABILITY.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/PROBABILITY.html</a></p>
+
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_negative_space_concept_04august2025.png" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_negative_space_concept_04august2025.png</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p0.txt</a></p>
