--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -17,6 +17,8 @@
 <p><strong><em>Each raw file which is part of the aforementioned GitHub repository is referenced via hyperlink in the following list of hyperlinks in the order those files appear in that GitHub repository.</em></strong></p>
 <hr />
 
+<p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/KARBYTES_CODE_CONTINUES.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/KARBYTES_CODE_CONTINUES.html</a></p>
+
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/LICENSE" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/LICENSE</a></p>
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/PROBABILITY.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/PROBABILITY.html</a></p>
@@ -54,6 +56,8 @@
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p1.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p1.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p2.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p2.txt</a></p>
+
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes_for_life_blog_updates.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes_for_life_blog_updates.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karlina_object_updates.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karlina_object_updates.txt</a></p>
 
