--- a/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html
+++ b/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html
@@ -117,5 +117,5 @@
 <p><a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING/triangle_graphing.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/TRIANGLE_GRAPHING/triangle_graphing.html</a></p>
 <p><a style="background: #00ff00;color: #000000" href="https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/WORD_COUNTER/word_counter.html" target="_blank" rel="noopener">https://karlinarayberinger.github.io/KARBYTES_BLOG_APPS_github_hosted_website/WORD_COUNTER/word_counter.html</a></p>
 <hr />
-<p>This web page was last updated on 21_JUNE_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 06_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr />
