--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -65,6 +65,8 @@
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/preparing_to_make_mdisc_set_on_06august2025.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/preparing_to_make_mdisc_set_on_06august2025.txt</a></p>
 
+<p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/print_folder_contents.py" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/print_folder_contents.py</a></p>
+
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html</a></p>
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html</a></p>
