--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -53,6 +53,8 @@
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/falling_apples_game_style.css" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/falling_apples_game_style.css</a></p>
 
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/github_karbytes_profile_pinned_repositories_updated_06august2025.png" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/github_karbytes_profile_pinned_repositories_updated_06august2025.png</a></p>
+
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_04august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_04august2025_p0.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_05august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_05august2025_p0.txt</a></p>
