--- a/unlisted_web_page_karbytes_social_media_posts_koep47.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep47.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes_social_media_posts.txt" target="_blank" rel="noopener noreferrer">karbytes_social_media_posts.txt</a>
  * type: plain-text
- * date: 06_AUGUST_2025
+ * date: 07_AUGUST_2025
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener noreferrer">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a>
  */
@@ -60,7 +60,19 @@ On 06_AUGUST_2025 at approximately 9:00PM Pacific Standard Time, karbytes remove
 On 06_AUGUST_2025 at approximately 9:00PM Pacific Standard Time, karbytes removed the social media posts linking to the following karbytes-created web page from karbytes' Twitter dot Com page, from karbytes' Minds dot Com page, from karbytes' LinkedIn dot Com page, from karbytes' Patreon dot Com page, and from karbytes' Bluesky dot Com page:
 
 <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/journal_karbytes_26july2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/journal_karbytes_26july2025/</a>
+
+* * *
+
+On 07_AUGUST_2025 at approximately 3:30AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/karbytes_workflow_established_05august2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/karbytes_workflow_established_05august2025/</a>
+
+* * *
+
+On 07_AUGUST_2025 at approximately 3:30AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/falling_apples_game/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/falling_apples_game/</a>
 </pre>
 <hr />
-<p>This web page was last updated on 06_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 07_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
