--- a/unlisted_web_page_mdisc_karbytes2025_20.html
+++ b/unlisted_web_page_mdisc_karbytes2025_20.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/mdisc_karbytes2025_20.txt" target="_blank" rel="noopener">mdisc_karbytes2025_20.txt</a>
  * type: <a style="background: #ff9000;color: #000000" href="https://en.wikipedia.org/wiki/Plain_text" target="_blank" rel="noopener">plain-text</a>
- * date: 06_AUGUST_2025
+ * date: 07_AUGUST_2025
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a>
  */
@@ -43,7 +43,7 @@ Finally, each zip file which is referenced on this web page has a file name with
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-karbytes2025_19: // folder contains exactly 153 files (approximately ??? megabytes total).
+karbytes2025_20: // folder contains exactly 153 files (approximately 16709.62 megabytes total).
 
     - zip_file_0: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_instagram_karbytes_2024/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_2024-main.zip</a> // 332.7 megabytes
 
@@ -107,7 +107,7 @@ karbytes2025_19: // folder contains exactly 153 files (approximately ??? megabyt
 
     - zip_file_30: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_BRAND_IMAGES_2021/" target="_blank" rel="noopener">KARBYTES_BRAND_IMAGES_2021-main.zip</a> // 10.2 megabytes
 
-    - zip_file_31: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_FOR_LIFE_BLOG/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG-main_[undefined_day].zip</a> // 752.6 kilobytes
+    - zip_file_31: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_FOR_LIFE_BLOG/" target="_blank" rel="noopener">KARBYTES_FOR_LIFE_BLOG-main_[undefined_day].zip</a> // 752.7 kilobytes
 
     - zip_file_32: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARBYTES_JOURNAL_2022_PART_0/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_0-main.zip</a> // 32.5 megabytes
 
@@ -315,7 +315,7 @@ karbytes2025_19: // folder contains exactly 153 files (approximately ??? megabyt
 
     - zip_file_134: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_46/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_46-main.zip</a> // 205.0 megabytes
 
-    - zip_file_135: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_47-main.zip</a> // ??? megabytes
+    - zip_file_135: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_47-main.zip</a> // 4.0 megabytes
 
     - zip_file_136: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_summer_2023_starter_pack/" target="_blank" rel="noopener">KARLINA_OBJECT_summer_2023_starter_pack-main.zip</a> // 28.8 megabytes
 
@@ -358,5 +358,5 @@ END_OF_FILE
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 </pre>
 <hr />
-<p>This web page was last updated on 06_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 07_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
