--- a/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
+++ b/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html
@@ -37,6 +37,8 @@
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_negative_space_concept_04august2025.png" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_negative_space_concept_04august2025.png</a></p>
 
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_pigs_with_guns_mall_overwatch_07august2025.png" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_generated_image_pigs_with_guns_mall_overwatch_07august2025.png</a></p>
+
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p0.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p1.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_01august2025_p1.txt</a></p>
@@ -48,6 +50,8 @@
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_05august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_05august2025_p0.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_05august2025_p1.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_05august2025_p1.txt</a></p>
+
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_07august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/chatgpt_karbytes_07august2025_p0.txt</a></p>
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/falling_apples_game_interface.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/falling_apples_game_interface.html</a></p>
 
@@ -69,6 +73,8 @@
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p2.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_06august2025_p2.txt</a></p>
 
+<p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_07august2025_p0.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/journal_karbytes_07august2025_p0.txt</a></p>
+
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes2025_20_contents.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes2025_20_contents.txt</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes_for_life_blog_updates.txt" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/karbytes_for_life_blog_updates.txt</a></p>
@@ -86,6 +92,8 @@
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARBYTES_BLOG_APPS_github_hosted_website.html</a></p>
 
 <p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_47.html</a></p>
+
+<p><a style="background: #000000;color: #00ff00" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_48.html" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/raw_github_files_directory_KARLINA_OBJECT_extension_pack_48.html</a></p>
 
 <p><a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/twitter_karbytes_profile_snippet_04august2025.png" target="_blank" rel="noopener">https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_47/main/twitter_karbytes_profile_snippet_04august2025.png</a></p>
 
