--- a/unlisted_web_page_karbytes_quality_control_milestone_07august2025.html
+++ b/unlisted_web_page_karbytes_quality_control_milestone_07august2025.html
@@ -14,4 +14,5 @@
 karbytes</p>
 </div>
 <hr>
-<p>Th
+<p>This web page was last updated on 07_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
+<hr>
