--- a/unlisted_web_page_karbytes_social_media_posts_koep47.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep47.html
@@ -72,6 +72,12 @@ On 07_AUGUST_2025 at approximately 3:30AM Pacific Standard Time, karbytes shared
 On 07_AUGUST_2025 at approximately 3:30AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
   
 <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/falling_apples_game/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/falling_apples_game/</a>
+
+* * *
+
+On 07_AUGUST_2025 at approximately 2:30PM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/karbytes_quality_control_milestone_07august2025/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/karbytes_quality_control_milestone_07august2025/</a>
 </pre>
 <hr />
 <p>This web page was last updated on 07_AUGUST_2025. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
